# PROJETO-4---SQL_AGENT

./: .gitignore  README.md  README_SEGURANCA.md  chat_completo.json  exemplo_seguranca_simples.py  langgraph.json  main.py  pyproject.toml
my_agent/: __init__.py  agent.py
my_agent/config/: __init__.py  database.py  prompts.py  settings.py  user_permissions.py
my_agent/models/: request.py  response.py
my_agent/utils/: __init__.py  helpers.py  nodes.py  security_nodes.py  state.py  tools.py
